testsuite/tests/warnings/should_fail/WarningCategory1.hs
module WarningCategory1 where

import WarningCategory1_B
import WarningCategoryModule

use :: [()]
use = [foo, bar, baz, quux, plugh, wurble]
